File: testsuite/nexus-virtual-thread-testsupport/pom.xml